--- a/23_bt_stevejobsghost_liE-liV/readme
+++ b/23_bt_stevejobsghost_liE-liV/readme
@@ -2,12 +2,15 @@ stevejobsghost: Verit Li (Nibbles), Erica Li (Hugo)
 K23 - Testing out Bootstrap Features
 Soft Dev
 2022-11-29
-time spent: 1.5 hr
+time spent: 2.0 hr
 
 DISCO:
 # is used as placeholders in bootstrap
 NAV BAR stands for navigation bar, an area on a page that contains links, buttons, etc (navigational stuff)
 NavBars can extend or collaspe, depending on the device dimensions & size
 Certain features such as dropdowns require extra JS (Poppers)
+Navbars can be fixed to the top but the <body> will need padding
+Bootstrap offers buttons and alerts with a range of colors and porposes
 
 QCC:
+Saw that there were style options forms, but didnt really get to explore
