--- a/24_fd_stevejobsghost_liE-liV/readme
+++ b/24_fd_stevejobsghost_liE-liV/readme
@@ -10,3 +10,6 @@ DISCO:
 
 QCC:
 *what's the use of data-dropdown-menu? removing it doesn't appear to change anything?
+
+q0 : 0
+q1 : Foundation. It is a lot simpler than Bootcamp. The class names are straightforward and more understandable. 
